[package]
name = "bevy-demo"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.15.3", features = ["jpeg", "bevy_render"]}
bevy_rapier3d = "0.29.0"
rand = "0.9.0"
